# cpp-job-interview-test

./: CMakeLists.txt
include/: template.h
src/: template.cc
ut/: CMakeLists.txt
ut/src/: template_test.cc
